<resources>
    <string name="app_name">CoffeeOrder</string>
    <string name="enter_name_here">Enter Name here</string>
    <string name="toppings">Toppings</string>
    <string name="with_cream">With Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="increment">+</string>
    <string name="value">1</string>
    <string name="decrement">-</string>
    <string name="order">Order</string>
</resources>